--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tinypool",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "A minimal and tiny Node.js Worker Thread Pool implementation, a fork of piscina, but with fewer features",
   "type": "module",
   "main": "./dist/esm/index.js",
@@ -65,7 +65,9 @@
     "modulePathIgnorePatterns": [
       "dist"
     ],
-    "extensionsToTreatAsEsm": [".ts"],
+    "extensionsToTreatAsEsm": [
+      ".ts"
+    ],
     "testRegex": "test.(js|ts|tsx)$",
     "coverageDirectory": "./coverage/",
     "collectCoverage": true,
