--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test:dev": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch --no-coverage",
     "dev": "tsup --watch",
     "build": "tsup --minify",
-    "publish": "clean-publish"
+    "publish": "clean-publish",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -40,14 +41,17 @@
     "concat-stream": "^2.0.0",
     "esbuild": "^0.14.5",
     "esbuild-register": "^3.2.1",
+    "eventemitter-asyncresource": "^1.0.0",
     "gen-esm-wrapper": "^1.1.1",
+    "husky": "^7.0.4",
     "jest": "^27.4.5",
+    "nano-staged": "^0.5.0",
+    "prettier": "^2.5.1",
     "snazzy": "^9.0.0",
     "tsup": "^5.11.6",
     "typescript": "4.3.x",
     "vite": "^2.7.3",
-    "vitest": "^0.0.92",
-    "eventemitter-asyncresource": "^1.0.0"
+    "vitest": "^0.0.92"
   },
   "bugs": {
     "url": "https://github.com/aslemammad/tinypool/issues"
