--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -3,27 +3,13 @@ on: [push, pull_request]
 name: CI
 
 jobs:
-  lint:
-    name: Lint
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Install Node.js 17
-        uses: actions/setup-node@v1
-        with:
-          node-version: v17.x
-      - name: Install dependencies
-        run: npm install
-      - name: Check linting
-        run: npm run lint
-
   test:
     name: Test
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        node-version: [12.x, 14.x, 16.x, 17.x]
+        node-version: [14.x, 16.x, 17.x]
     runs-on: ${{matrix.os}}
     steps:
       - uses: actions/checkout@v2
@@ -32,6 +18,6 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install Dependencies
-        run: npm install
+        run: yarn install
       - name: Test
-        run: npm test
+        run: yarn test:ci
