--- a/package.json
+++ b/package.json
@@ -50,8 +50,7 @@
     "snazzy": "^9.0.0",
     "tsup": "^5.11.6",
     "typescript": "4.3.x",
-    "vite": "^2.7.3",
-    "vitest": "^0.0.92"
+    "vite": "^2.7.3"
   },
   "bugs": {
     "url": "https://github.com/aslemammad/tinypool/issues"
