--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "jest": "^27.4.5",
     "nano-staged": "^0.5.0",
     "prettier": "^2.5.1",
+    "regenerator-runtime": "^0.13.9",
     "snazzy": "^9.0.0",
     "tsup": "^5.11.6",
     "typescript": "4.3.x",
