--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dist/**"
   ],
   "scripts": {
-    "test:ci": "node --experimental-vm-modules node_modules/jest/bin/jest.js --no-coverage",
+    "test:ci": "node --experimental-vm-modules node_modules/jest/bin/jest.js --no-coverage --runInBand",
     "test:dev": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch --no-coverage",
     "dev": "tsup --watch",
     "build": "tsup",
