--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "dist/**"
   ],
   "scripts": {
-    "test:ci": "node --experimental-vm-modules node_modules/jest/bin/jest.js --no-coverage --runInBand",
-    "test:dev": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch --no-coverage",
+    "test:ci": "vitest",
+    "test:dev": "vitest --no-coverage",
     "dev": "tsup --watch",
     "build": "tsup",
     "publish": "clean-publish",
@@ -29,12 +29,8 @@
   "license": "MIT",
   "devDependencies": {
     "@swc/core": "^1.2.120",
-    "@swc/jest": "^0.2.15",
     "@types/concat-stream": "^1.6.1",
-    "@types/jest": "^27.0.3",
     "@types/node": "^15.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
     "abort-controller": "^3.0.0",
     "c8": "^7.10.0",
     "clean-publish": "^3.4.4",
@@ -44,14 +40,15 @@
     "eventemitter-asyncresource": "^1.0.0",
     "gen-esm-wrapper": "^1.1.1",
     "husky": "^7.0.4",
-    "jest": "^27.4.5",
     "nano-staged": "^0.5.0",
     "prettier": "^2.5.1",
     "regenerator-runtime": "^0.13.9",
     "snazzy": "^9.0.0",
+    "tinybench": "^2.1.1",
     "tsup": "^5.11.6",
     "typescript": "4.3.x",
-    "vite": "^2.7.3"
+    "vite": "^2.9.12",
+    "vitest": "^0.22.1"
   },
   "bugs": {
     "url": "https://github.com/aslemammad/tinypool/issues"
@@ -59,33 +56,5 @@
   "homepage": "https://github.com/aslemammad/tinypool#readme",
   "engines": {
     "node": ">=14.0.0"
-  },
-  "jest": {
-    "rootDir": ".",
-    "moduleNameMapper": {
-      "^tinypool$": "<rootDir>/dist/esm/index.js"
-    },
-    "modulePathIgnorePatterns": [
-      "dist"
-    ],
-    "extensionsToTreatAsEsm": [
-      ".ts"
-    ],
-    "testRegex": "test.(js|ts|tsx)$",
-    "coverageDirectory": "./coverage/",
-    "collectCoverage": true,
-    "coverageReporters": [
-      "json",
-      "html",
-      "text",
-      "text-summary"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.{js,ts,tsx}",
-      "tests/**/*.{js,ts,tsx}"
-    ],
-    "transform": {
-      "^.+\\.(t|j)sx?$": "@swc/jest"
-    }
   }
 }
