--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,10 +14,11 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
+    "types": ["vitest/globals"],
     "paths": {
       "tinypool": ["./dist/index.d.ts"]
     }
   },
-  "include": ["src/**/*", "test/**/*"],
+  "include": ["src/**/*", "test/**/*", "bench/**/*"],
   "exclude": ["node_modules", "dist"]
 }
