--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -9,7 +9,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        node-version: [14.x, 16.x, 18.x]
+        node-version: [16.x, 18.x]
     runs-on: ${{matrix.os}}
     steps:
       - uses: actions/checkout@v2
@@ -17,9 +17,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - uses: pnpm/action-setup@v2.2.2
-        with:
-          version: 7.x.x
+      - uses: pnpm/action-setup@v2
       - name: Install Dependencies
         run: pnpm install
       - name: Build
