--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "files": [
     "dist/**"
   ],
+  "packageManager": "pnpm@8.4.0",
   "scripts": {
     "test:ci": "node --experimental-vm-modules node_modules/jest/bin/jest.js --no-coverage --runInBand",
     "test:dev": "node --experimental-vm-modules --trace-warnings node_modules/jest/bin/jest.js --watch --no-coverage",
