feat: support Bun `Worker` runtime
- Instead of using Node APIs like in #70, use Bun's native Workers API

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -13,14 +13,28 @@ jobs:
     runs-on: ${{matrix.os}}
     steps:
       - uses: actions/checkout@v2
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+
+      - uses: oven-sh/setup-bun@v1
+        if: ${{ matrix.os != 'windows-latest' }}
+        with:
+          bun-version: latest
+
       - uses: pnpm/action-setup@v2
+
       - name: Install Dependencies
         run: pnpm install
+
       - name: Build
         run: pnpm build
+
       - name: Test
         run: pnpm test:ci
+
+      - name: Test Bun
+        if: ${{ matrix.os != 'windows-latest' }}
+        run: pnpm test:bun
