--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   ],
   "packageManager": "pnpm@8.4.0",
   "scripts": {
-    "test:ci": "node --experimental-vm-modules node_modules/jest/bin/jest.js --no-coverage --runInBand",
-    "test:dev": "node --experimental-vm-modules --trace-warnings node_modules/jest/bin/jest.js --watch --no-coverage",
+    "test": "vitest",
     "dev": "tsup --watch",
     "build": "tsup",
     "publish": "clean-publish",
@@ -29,15 +28,11 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@swc/core": "^1.2.120",
-    "@swc/jest": "^0.2.15",
     "@types/concat-stream": "^1.6.1",
-    "@types/jest": "^27.0.3",
     "@types/node": "^15.0.1",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "abort-controller": "^3.0.0",
-    "c8": "^7.10.0",
     "clean-publish": "^3.4.4",
     "concat-stream": "^2.0.0",
     "esbuild": "^0.14.5",
@@ -45,14 +40,14 @@
     "eventemitter-asyncresource": "^1.0.0",
     "gen-esm-wrapper": "^1.1.1",
     "husky": "^7.0.4",
-    "jest": "^27.4.5",
     "nano-staged": "^0.5.0",
     "prettier": "^2.5.1",
     "regenerator-runtime": "^0.13.9",
     "snazzy": "^9.0.0",
     "tsup": "^5.11.6",
     "typescript": "4.3.x",
-    "vite": "^2.7.3"
+    "vite": "^5.2.10",
+    "vitest": "^1.5.0"
   },
   "bugs": {
     "url": "https://github.com/tinylibs/tinypool/issues"
@@ -61,33 +56,9 @@
   "engines": {
     "node": ">=14.0.0"
   },
-  "jest": {
-    "rootDir": ".",
-    "moduleNameMapper": {
-      "^tinypool$": "<rootDir>/dist/esm/index.js"
-    },
-    "modulePathIgnorePatterns": [
-      "dist"
-    ],
-    "extensionsToTreatAsEsm": [
-      ".ts"
-    ],
-    "testRegex": "test.(js|ts|tsx)$",
-    "verbose": true,
-    "coverageDirectory": "./coverage/",
-    "collectCoverage": true,
-    "coverageReporters": [
-      "json",
-      "html",
-      "text",
-      "text-summary"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.{js,ts,tsx}",
-      "tests/**/*.{js,ts,tsx}"
-    ],
-    "transform": {
-      "^.+\\.(t|j)sx?$": "@swc/jest"
+  "pnpm": {
+    "overrides": {
+      "vitest>tinypool": "link:./"
     }
   }
 }
