--- a/package.json
+++ b/package.json
@@ -1,8 +1,23 @@
 {
   "name": "tinypool",
-  "version": "0.8.4",
-  "description": "A minimal and tiny Node.js Worker Thread Pool implementation, a fork of piscina, but with fewer features",
   "type": "module",
+  "version": "0.8.4",
+  "packageManager": "pnpm@9.0.6",
+  "description": "A minimal and tiny Node.js Worker Thread Pool implementation, a fork of piscina, but with fewer features",
+  "license": "MIT",
+  "homepage": "https://github.com/tinylibs/tinypool#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tinylibs/tinypool.git"
+  },
+  "bugs": {
+    "url": "https://github.com/tinylibs/tinypool/issues"
+  },
+  "keywords": [
+    "fast",
+    "worker threads",
+    "thread pool"
+  ],
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -29,7 +44,9 @@
   "files": [
     "dist"
   ],
-  "packageManager": "pnpm@8.4.0",
+  "engines": {
+    "node": "^18.0.0 || >=20.0.0"
+  },
   "scripts": {
     "test": "vitest",
     "dev": "tsup --watch",
@@ -37,16 +54,6 @@
     "publish": "clean-publish",
     "prepare": "husky install"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/tinylibs/tinypool.git"
-  },
-  "keywords": [
-    "fast",
-    "worker threads",
-    "thread pool"
-  ],
-  "license": "MIT",
   "devDependencies": {
     "@types/concat-stream": "^1.6.1",
     "@types/node": "^20.12.8",
@@ -67,13 +74,6 @@
     "typescript": "^5.4.5",
     "vite": "^5.2.10",
     "vitest": "^1.5.0"
-  },
-  "bugs": {
-    "url": "https://github.com/tinylibs/tinypool/issues"
-  },
-  "homepage": "https://github.com/tinylibs/tinypool#readme",
-  "engines": {
-    "node": ">=14.0.0"
   },
   "pnpm": {
     "overrides": {
