test: convert benchmarks to vitest

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "scripts": {
     "test": "vitest",
+    "bench": "vitest bench",
     "dev": "tsup --watch",
     "build": "tsup",
     "publish": "clean-publish",
