--- a/package.json
+++ b/package.json
@@ -39,16 +39,20 @@
     "dev": "tsup --watch",
     "build": "tsup",
     "publish": "clean-publish",
-    "prepare": "husky install"
+    "lint": "eslint --max-warnings=0",
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@types/node": "^20.12.8",
     "clean-publish": "^3.4.4",
-    "husky": "^7.0.4",
-    "nano-staged": "^0.5.0",
-    "prettier": "^2.5.1",
+    "eslint": "^9.4.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-unicorn": "^53.0.0",
+    "prettier": "^3.3.2",
     "tsup": "^8.0.2",
     "typescript": "^5.4.5",
+    "typescript-eslint": "^7.13.0",
     "vite": "^5.2.11",
     "vitest": "^1.6.0"
   },
