ci: limit pkg-pr-new to upstream

--- a/.github/workflows/release-commits.yml
+++ b/.github/workflows/release-commits.yml
@@ -6,6 +6,8 @@ jobs:
   publish:
     name: Publish commit
     runs-on: ubuntu-latest
+    if: github.repository == 'tinylibs/tinypool'
+
     steps:
       - uses: actions/checkout@v2
 
