refactor: use non deprecated type in eslint configuration
and remove duplicated prettier configuration

Signed-off-by: Jérôme Benoit <jerome.benoit@piment-noir.org>

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "build": "tsup",
     "publish": "clean-publish",
     "lint": "eslint --max-warnings=0",
+    "lint:fix": "eslint --max-warnings=0 --fix",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
