chore: include node types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
-    "types": ["vitest/globals"],
+    "types": ["vitest/globals", "@types/node"],
     "paths": {
       "tinypool": ["./dist/index.d.ts"]
     }
